# gameanalysis

./: .Analysis.py.swp  .ArrayClasses.py.swp  .GameAnalysis.py.swp  .RoleSymmetricGame.py.swp  .gitignore  .gitmodules  .pylintrc  .travis.yml  ActionGraphGame.py  Analysis.py  AnalysisScript.py  ArrayClasses.py  ArrayIO.py  BasicFunctions.py  Bootstrap.py  ControlVariates.py  DPR_EVs.py  DPR_Nash.py  Dominance.py  ExampleWorkflow.py  GP_EVs.py  GP_Nash.py  GameAnalysis.py  GameArray.py  GameIO.py  HashableClasses.py  LEG_Regret.py  LearnPayoffs.py  LearnedModels.py  Makefile  Nash.py  NormalizedLearning.py  Purification.py  README.md  RandomGames.py  Reductions.py  Regret.py  RoleSymmetricAnalysis.py  RoleSymmetricGame.py  SampleAGGs.py  (+34 more)
docs/: .buildinfo  Makefile  cont_approx.html  endogenous_mix_eqa.html  gameanalysis.aggfn.html  gameanalysis.agggen.html  gameanalysis.bootstrap.html  gameanalysis.canongame.html  gameanalysis.collect.html  gameanalysis.dominance.html  gameanalysis.fixedpoint.html  gameanalysis.gambit.html  gameanalysis.gamegen.html  gameanalysis.gamereader.html  gameanalysis.html  gameanalysis.learning.html  gameanalysis.matgame.html  gameanalysis.merge.html  gameanalysis.mergegame.html  gameanalysis.nash.html  gameanalysis.paygame.html  gameanalysis.reduction.deviation_preserving.html  gameanalysis.reduction.hierarchical.html  gameanalysis.reduction.html  gameanalysis.reduction.identity.html  gameanalysis.reduction.twins.html  gameanalysis.regret.html  gameanalysis.restrict.html  gameanalysis.rsgame.html  gameanalysis.script.analyze.html  gameanalysis.script.boot.html  gameanalysis.script.conv.html  gameanalysis.script.dom.html  gameanalysis.script.gen.html  gameanalysis.script.html  gameanalysis.script.learning.html  gameanalysis.script.nash.html  gameanalysis.script.pay.html  gameanalysis.script.red.html  gameanalysis.script.reg.html  (+15 more)
example_games/: hard_nash.json  hard_scarf.json  ugly.nfg
gameanalysis/: AGGFN.py  AGGgen.py  Reductions.py  __init__.py  __main__.py  aggfn.py  agggen.py  bootstrap.py  canongame.py  collect.py  congestion.py  convert.py  dominance.py  fixedpoint.py  funcs.py  ga.py  gambit.py  gamegen.py  gameio.py  gamelearning.py  gamereader.py  gpgame.py  hcollections.py  learning.py  matgame.py  merge.py  mergegame.py  nash.py  paygame.py  primes.py  profile.py  randgames.py  reduction.py  regret.py  restrict.py  rsgame.py  script.py  scriptutils.py  serialize.py  subgame.py  (+2 more)
profile/: data.json  display.py  run.py
quickuse/: Makefile  README.md
scripts/: AnalysisScript.py  plot_boot_res.py
sphinx/: .gitignore  conf.py  index.rst  profile_counts.rst  profile_nash.rst
test/: __init__.py  aggfn_test.py  agggen_test.py  bootstrap_test.py  collect_test.py  command_line_test.sh  congestion_test.py  dominance_test.py  fixedpoint_test.py  game_test.py  gamegen_test.py  gameio_test.py  gamelearning_test.py  gamereader_test.py  gpgame_test.py  matgame_test.py  nash_test.py  paygame_test.py  profile_nash.py  profile_test.py  randgames_test.py  reduction_test.py  regret_test.py  rsgame_test.py  script_test.py  scripts_test.py  serialize_test.py  subgame_test.py  test_aggfn.py  test_agggen.py  test_bootstrap.py  test_canongame.py  test_collect.py  test_dominance.py  test_fixedpoint.py  test_gambit.py  test_gamegen.py  test_gamereader.py  test_learning.py  test_matgame.py  (+15 more)
test_games/: .Test.py.swp  PD_str.xml  PD_sym.xml  RPS_str.xml  RPS_sym.xml  Test.py  TestGameAnalysis.py  cliques_HLRR.json  cliques_HLRR_HLAA.json  cliques_all_sym.json  cliques_full.json  conditional_dominance_BC.xml  conditional_dominance_BCR.xml  conditional_dominance_BL.xml  conditional_dominance_BR.xml  never_best_response.xml  one_player.xml  one_profile.xml  (+6 more)
(+149 files in other folders)
