[metadata]
name = gameanalysis
version = attr: gameanalysis.__version__
description = A python module for analyzing sparse and empirical games
long_description = file: README.md
url = https://github.com/egtaonline/gameanalysis.git
author = Strategic Reasoning Group
author_email = strategic.reasoning.group@umich.edu
license = Apache 2.0

[options]
install_requires =
    numpy~=1.13
    scipy~=1.0
    scikit-learn~=0.18
packages =
    gameanalysis
    gameanalysis.script

# TODO Structure gamelearnign tensorflow and keras as extras
[options.extras_require]
nn =
    Keras~=2.0
    tensorflow~=1.3
dev =
    autopep8~=1.3
    flake8~=3.4
    ipython~=6.1
    mock~=2.0
    pytest-cov~=2.5
    pytest-xdist~=1.18
    pytest~=3.2
    setuptools~=36.6
    sphinx~=1.6
    wheel~=0.29

[options.entry_points]
console_scripts =
    ga=gameanalysis.__main__:main

[tool:pytest]
addopts = -rs -nauto --strict --showlocals --cov-report term-missing --duration 5 -m 'not slow'
filterwarnings = error
markers =
    slow: takes too long to run normally.

[build_sphinx]
build-dir = docs/build
warning-is-error = true

[coverage:run]
branch = True
