[metadata]
name = gameanalysis
version = attr: gameanalysis.__version__
description = A python module for analyzing sparse and empirical games
long_description = file: README.md
url = https://github.com/egtaonline/gameanalysis.git
author = Strategic Reasoning Group
author_email = strategic.reasoning.group@umich.edu
license = Apache 2.0

[options]
install_requires =
    numpy~=1.13
    scipy~=1.0
    scikit-learn~=0.18
packages =
    gameanalysis
    gameanalysis.script
    gameanalysis.reduction

# TODO Structure gamelearnign tensorflow and keras as extras
[options.extras_require]
nn =
    Keras~=2.0
    tensorflow~=1.3
dev =
    autograd~=1.2
    ipython~=6.1
    mock~=2.0
    pylint-quotes~=0.1
    pylint~=1.8
    pytest-cov~=2.5
    pytest-xdist~=1.18
    pytest~=3.2
    sphinx~=1.6
    tabulate~=0.8
    timeout-decorator~=0.4
    twine~=1.9
    wheel~=0.29

[options.entry_points]
console_scripts =
    ga=gameanalysis.__main__:main

[tool:pytest]
addopts = -rs -nauto --strict --showlocals --cov-report term-missing --duration 5 -m 'not slow'
markers =
    filterwarnings
    slow: takes too long to run normally.

[build_sphinx]
source-dir = sphinx
build-dir = sphinx/build
warning-is-error = true

[coverage:run]
branch = True
