[metadata]
name = gameanalysis
version = attr: gameanalysis.__version__
description = A python module for analyzing sparse and empirical games
long_description = file: README.md
url = https://github.com/egtaonline/gameanalysis.git
author = Strategic Reasoning Group
author_email = strategic.reasoning.group@umich.edu
license = Apache 2.0

[options]
install_requires =
    numpy~=1.18.0
    scipy~=1.5
    scikit-learn~=0.23
packages =
    gameanalysis
    gameanalysis.script
    gameanalysis.reduction

# TODO Structure gamelearnign tensorflow and keras as extras
[options.extras_require]
nn =
    Keras~=2.4
    tensorflow~=2.3
dev =
    autograd~=1.3
    black~=20.8
    ipython~=7.18
    mock~=4.0
    pylint~=2.6
    pytest-cov~=2.10
    pytest-xdist~=2.1
    pytest~=6.1
    sphinx~=3.2
    tabulate~=0.8
    twine~=3.2
    wheel~=0.35

[options.entry_points]
console_scripts =
    ga=gameanalysis.__main__:main

[tool:pytest]
addopts = -rs -nauto --strict --showlocals --cov-report term-missing --durations 5 -m 'not slow'
markers =
    filterwarnings
    slow: takes too long to run normally.

[build_sphinx]
source-dir = sphinx
build-dir = sphinx/build
warning-is-error = true

[coverage:run]
branch = True
